	atoms.

	* include/openbabel/math/*.h, src/math/*.cpp: Updates to fix
	some GCC warnings.

	* include/openbabel/bond.h, src/bond.cpp: Patch from Steven
	Constable, PR#2004391. Adds SetLength() to move both atoms.

	* include/openbabel/mol.h: Fix for ReserveAtoms() suggested by
	Andrew Dalke.

	* src/formats/mdlformat.cpp: Fix for SKP records, suggested by
	Andrew.

2008-06-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/parsmart.cpp: Add support for Isotopes in SMARTS. Fixes
	PR#1987729.

	* test/files/nci.smi: Add tests for matching isotopic
	SMILES/SMARTS.

2008-06-23  Chris Morley

	* test/inchiwrite.cpp: add -xn option so that the tests are done without
	the 'recommended' InChI options. wInChI.exe is not yet available
	for InChI 1.02. Needs revisting when it is.

	* src/fingerprint.cpp(FastSearchIndexer): ensure fpid is terminated
	when copied to guard against theoretical problem pointed out
	by Andrew Dalke.

2008-06-21  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/chains.cpp: Assign HOH and ligands to separate residues.
	(#1774776)

2008-06-21  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/atomrecord.cpp: Keep original chain ID (#1760959).

2008-06-21  Carsten Niehaus  <cniehaus@kde.org>

	* src/obutil.cpp: Typo fixes.

	* src/forcefields/[forcefielduff.cpp,forcefieldmmff94.cpp]: Typo fixes

	* src/formats/[mpdformat.cpp,xtcformat.cpp]: Typo fixes
	
	* src/forcefields/*.h: Make ctor explicit.
	
2008-06-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obutil.cpp (CartesianToInternal): Fix PR#1923896 for
	Fenske-Hall z-matrix format. When looking for non-linear
	atoms, don't pick non-bonded >10.0 Angstroms, which cause
	problems with FH (and other) fixed format z-matrices.

	* src/mol.cpp (ConnectTheDots): Fix for PR#1813502 for
	existing bonds getting deleted by ConnectTheDots. Make sure to
	preserve all original connections from PDB.

	* src/formats/pdbformat.cpp (ReadMolecule): Fix for PR#1985681